--- a/static/css/slideStyle.css
+++ b/static/css/slideStyle.css
@@ -62,3 +62,11 @@
 	font-size: 10px;
 	color: grey;
 }
+
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
